2009-XX-XX:
    * version 2.1 (probably)
    * add :silent
    * add $MY_VIMPERATORRC

2008-XX-XX:
    * version 2.0 (probably)
    * IMPORTANT: For compatibility with vim, guioptions=b has been renamed
      'B'. 'b' now represents the bottom scrollbar.
    * IMPORTANT: :set now sets multiple options, as in Vim. Spaces in values
      must be quoted or escaped.
    * IMPORTANT: Due to much improved autocompletion, changed default 'complete' option
      value to 'sfl', listing intelligent Firefox location bar results. Removed possibility
      to use 'h' in 'complete'.
    * IMPORTANT: AlwaysHint mode with ;F mode changed the semantics slightly.
    * IMPORTANT: command actions now take an args object, returned from
      commands.parseArgs, as their first argument. This will break any commands
      not using the args parser explicitly.  The old string value is now
      available via args.string.
    * IMPORTANT: 'verbose' is now used for message levels. Logging is
      controlled by the extensions.liberator.loglevel preference.
    * IMPORTANT: :viusage and :exusage now jump to the help index, use the
      special versions for the old behavior.
    * IMPORTANT: renamed Startup and Quit autocmd events to VimperatorEnter and
      VimperatorLeave respectively.
    * IMPORTANT: 'verbose' is now by default at 1, set to 0 to not show any status messages.
    * IMPORTANT: $VIMPERATOR_HOME is no longer used.

    * [count]<C-n> now goes to the [count]th next tab rather than the [count]th tab.
    * add ~/.vimperator/info/{profile}/, similar to viminfo
    * add $VIMPERATOR_RUNTIME, $VIMPERATOR_INIT
    * :hardcopy now supports output redirection to a file on Unix and MacUnix
    * add ";f" extended hint mode to focus a frame
    * add "r", "l", and "b" to 'guioptions' to toggle the scrollbars.
    * remove spaces and newlines when open urls starting with http:// or similar
      before :o http://linux .com would search for http://linux and for .com, now