@@ -2,6 +2,8 @@
     * version 2.1 (probably)
     * add :silent
     * add $MY_VIMPERATORRC
+    * add ' and " local marks
+    * add "w" and "W" Normal mode mappings for symmetry with o/O and t/T
 
 2008-XX-XX:
     * version 2.0 (probably)
